# zeon-kernel

./: .gn  BUILD.gn  Cargo.toml  Dockerfile  Justfile  LICENSE  Makefile  README.md  build.rs  rust-toolchain.toml
.cargo/: config.toml
.github/workflows/: test.yml
docs/: gn-build.md
etc/: syscalls_linux_aarch64.md
gn/: BUILD.gn  README.md
gn/arch/arm64/: BUILD.gn
gn/config/: BUILD.gn
gn/drivers/: BUILD.gn
gn/fs/: BUILD.gn
gn/net/: BUILD.gn
gn/platform/: BUILD.gn
libkernel/: BUILD.gn  Cargo.toml
libkernel/src/: driver.rs  error.rs  lib.rs  pod.rs
libkernel/src/arch/: mod.rs
libkernel/src/arch/arm64/: mod.rs
libkernel/src/arch/arm64/memory/: mod.rs  pg_descriptors.rs  pg_tables.rs  pg_tear_down.rs  pg_walk.rs  tlb.rs
libkernel/src/error/: syscall_error.rs
libkernel/src/fs/: attr.rs  mod.rs  path.rs  pathbuf.rs
libkernel/src/fs/blk/: buffer.rs  mod.rs  ramdisk.rs
libkernel/src/fs/filesystems/: mod.rs  tmpfs.rs
libkernel/src/fs/filesystems/ext4/: mod.rs
libkernel/src/fs/filesystems/fat32/: bpb.rs  dir.rs  fat.rs  file.rs  mod.rs  reader.rs
libkernel/src/fs/filesystems/fat32/dir/test/: raw_test.rs
libkernel/src/memory/: address.rs  kbuf.rs  mod.rs  page.rs  permissions.rs  pg_offset.rs  region.rs
libkernel/src/memory/allocators/: frame.rs  mod.rs  phys.rs  smalloc.rs
libkernel/src/memory/allocators/slab/: allocator.rs  cache.rs  heap.rs  mod.rs  slab.rs
libkernel/src/memory/proc_vm/: mod.rs  vmarea.rs
libkernel/src/memory/proc_vm/memory_map/: mod.rs  tests.rs
libkernel/src/proc/: caps.rs  ids.rs  mod.rs
libkernel/src/sync/: condvar.rs  mod.rs  mpsc.rs  mutex.rs  once_lock.rs  per_cpu.rs  rwlock.rs  spinlock.rs  waker_set.rs
moss-macros/: Cargo.toml
moss-macros/src/: lib.rs
scripts/: create-image.sh  download-arm-toolchain.sh
src/: main.rs
src/arch/: mod.rs
src/arch/arm64/: cpu_ops.rs  fdt.rs  mod.rs  proc.rs  psci.rs  ptrace.rs
src/arch/arm64/boot/: exception_level.rs  logical_map.rs  memory.rs  mod.rs  paging_bootstrap.rs  secondary.rs
src/arch/arm64/exceptions/: esr.rs  mod.rs  syscall.rs
src/arch/arm64/memory/: address_space.rs  fault.rs  fixmap.rs  heap.rs  mmu.rs  mod.rs  tlb.rs  uaccess.rs
src/arch/arm64/memory/mmu/: page_allocator.rs  page_mapper.rs  smalloc_page_allocator.rs
src/arch/arm64/proc/: idle.rs  signal.rs  vdso.rs
src/clock/: gettime.rs  mod.rs  realtime.rs  settime.rs  timeofday.rs  timespec.rs
src/console/: buf.rs  chardev.rs  mod.rs  tty.rs
src/console/tty/: cooker.rs  meta.rs
src/drivers/: fdt_prober.rs  init.rs  mod.rs  virtio_hal.rs
src/drivers/audio/: mod.rs
src/drivers/block/: mod.rs
src/drivers/block/nvme/: mod.rs
src/drivers/chrdev/: mod.rs  null.rs  random.rs  zero.rs
src/drivers/display/: mod.rs  virtio.rs
src/drivers/fs/: dev.rs  ext4.rs  fat32.rs  mod.rs  proc.rs  tmpfs.rs
src/drivers/fs/cgroup/: mod.rs
src/drivers/fs/proc/: cmdline.rs  meminfo.rs  root.rs  stat.rs
src/drivers/fs/proc/task/: fd.rs  mod.rs  task.rs  task_file.rs
src/drivers/fs/sys/: mod.rs
src/drivers/gpu/: mod.rs
src/drivers/i2c/: mod.rs
src/drivers/interrupts/: arm_gic_v2.rs  arm_gic_v3.rs  mod.rs
src/drivers/net/: mod.rs
src/drivers/net/virtio/: mod.rs
src/drivers/probe/: mod.rs
src/drivers/rng/: mod.rs  virtio.rs
src/drivers/rtc/: mod.rs  pl031.rs
src/drivers/spi/: mod.rs
src/drivers/timer/: armv8_arch.rs  mod.rs
src/drivers/uart/: bcm2835_aux.rs  imx_lp.rs  mod.rs  pl011.rs
src/drivers/usb/: mod.rs
src/drivers/video/: mod.rs  virtio_gpu.rs
src/fs/: dir.rs  fops.rs  mod.rs  open_file.rs  pipe.rs  reg.rs
src/fs/syscalls/: chdir.rs  chmod.rs  chown.rs  close.rs  copy_file_range.rs  getxattr.rs  ioctl.rs  iov.rs  listxattr.rs  mod.rs  mount.rs  open.rs  removexattr.rs  rw.rs  seek.rs  setxattr.rs  splice.rs  stat.rs  statfs.rs  sync.rs  trunc.rs
src/fs/syscalls/at/: access.rs  chmod.rs  chown.rs  handle.rs  link.rs  mkdir.rs  mod.rs  open.rs  readlink.rs  rename.rs  stat.rs  statx.rs  symlink.rs  unlink.rs  utime.rs
src/interrupts/: cpu_messenger.rs  mod.rs
src/kernel/: cpu_id.rs  getcpu.rs  hostname.rs  kpipe.rs  mod.rs  power.rs  rand.rs  sysinfo.rs  uname.rs
src/memory/: brk.rs  fault.rs  mincore.rs  mmap.rs  mod.rs  page.rs  process_vm.rs  uaccess.rs
src/memory/uaccess/: cstr.rs
src/net/: mod.rs  sops.rs  tcp.rs  unix.rs
src/net/syscalls/: accept.rs  bind.rs  connect.rs  listen.rs  mod.rs  recv.rs  send.rs  shutdown.rs  socket.rs
src/process/: caps.rs  clone.rs  creds.rs  ctx.rs  exec.rs  exit.rs  fd_table.rs  mod.rs  owned.rs  prctl.rs  ptrace.rs  sleep.rs  thread_group.rs
src/process/exec/: auxv.rs
src/process/fd_table/: dup.rs  fcntl.rs  select.rs
src/process/thread_group/: builder.rs  pid.rs  rsrc_lim.rs  signal.rs  umask.rs  wait.rs
src/process/thread_group/signal/: kill.rs  ksigaction.rs  sigaction.rs  sigaltstack.rs  sigprocmask.rs  uaccess.rs
src/process/threading/: mod.rs
src/process/threading/futex/: key.rs  mod.rs  wait.rs
src/sched/: mod.rs  syscall_ctx.rs  uspc_ret.rs  waker.rs
src/sched/runqueue/: mod.rs  vclock.rs
src/sched/sched_task/: mod.rs  state.rs
src/sync/: mod.rs  per_cpu.rs
src/testing/: mod.rs
usertest/: Cargo.toml
usertest/.cargo/: config.toml
usertest/src/: fs.rs  futex.rs  main.rs  signals.rs  socket.rs
zeon-macros/: BUILD.gn  Cargo.toml
zeon-macros/src/: lib.rs
